[package]
name = "task_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.39", features = ["serde", "unstable-locales"]}
iced = "0.13.1"
iced_aw = {version ="0.11.0", features = ["date_picker"]}
serde = {version="1.0.217", features=["derive"]}
serde_json = "1.0.137"
uuid = {version = "1.12.1", features = ["v4", "serde"]}
